[modify] add [tag:]

--- a/CFn/iam-role-datadog/iam-role-datadog.yaml
+++ b/CFn/iam-role-datadog/iam-role-datadog.yaml
@@ -1,105 +1,146 @@
-AWSTemplateFormatVersion: "2010-09-09"
-Parameters: 
-  DatadogExternalID: 
+AWSTemplateFormatVersion: '2010-09-09'
+Parameters:
+  DatadogExternalID:
     Default: ExternalID
-    Description: "Datadog AWS External ID"
+    Description: Datadog AWS External ID
     Type: String
-Resources: 
-  DatadogAWSIntegrationRole: 
-    Type: "AWS::IAM::Role"
-    Properties: 
-      AssumeRolePolicyDocument: 
-        Version: "2012-10-17"
-        Statement: 
-          - Action: "sts:AssumeRole"
-            Effect: Allow
-            Condition: 
-              StringEquals: 
-                "sts:ExternalId": 
-                  Ref: DatadogExternalID
-            Principal: 
-              AWS: "arn:aws:iam::464622532012:root"
-      Path: "/"
-  DatadogAWSIntegrationPolicy: 
-    Type: "AWS::IAM::Policy"
-    Properties: 
+Resources:
+  DatadogAWSIntegrationRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Action: sts:AssumeRole
+          Effect: Allow
+          Condition:
+            StringEquals:
+              sts:ExternalId: !Ref 'DatadogExternalID'
+          Principal:
+            AWS: arn:aws:iam::464622532012:root
+      Path: /
+  DatadogAWSIntegrationPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
       PolicyName: DatadogAWSIntegration
-      PolicyDocument: 
-        Version: "2012-10-17"
-        Statement: 
-          - Action: 
-              - "autoscaling:Describe*"
-              - "budgets:ViewBudget"
-              - "cloudtrail:DescribeTrails"
-              - "cloudtrail:GetTrailStatus"
-              - "cloudwatch:Describe*"
-              - "cloudwatch:Get*"
-              - "cloudwatch:List*"
-              - "dynamodb:list*"
-              - "dynamodb:describe*"
-              - "ec2:Describe*"
-              - "ec2:Get*"
-              - "ecs:Describe*"
-              - "ecs:List*"
-              - "elasticache:Describe*"
-              - "elasticache:List*"
-              - "elasticloadbalancing:Describe*"
-              - "elasticmapreduce:List*"
-              - "elasticmapreduce:Describe*"
-              - "es:ListTags"
-              - "es:ListDomainNames"
-              - "es:DescribeElasticsearchDomains"
-              - "kinesis:List*"
-              - "kinesis:Describe*"
-              - "logs:Get*"
-              - "logs:Describe*"
-              - "logs:FilterLogEvents"
-              - "logs:TestMetricFilter"
-              - "rds:Describe*"
-              - "rds:List*"
-              - "route53:List*"
-              - "s3:GetBucketTagging"
-              - "s3:ListAllMyBuckets"
-              - "ses:Get*"
-              - "sns:List*"
-              - "sns:Publish"
-              - "sqs:ListQueues"
-              - "support:*"
-            Effect: Allow
-            Resource: "*"
-      Roles: 
-        - Ref: DatadogAWSIntegrationRole
-  DatadogAWSCloudTrailReadOnlyAccessPolicy: 
-    Type: "AWS::IAM::Policy"
-    Properties: 
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Action:
+          - autoscaling:Describe*
+          - budgets:ViewBudget
+          - cloudtrail:DescribeTrails
+          - cloudtrail:GetTrailStatus
+          - cloudwatch:Describe*
+          - cloudwatch:Get*
+          - cloudwatch:List*
+          - dynamodb:list*
+          - dynamodb:describe*
+          - ec2:Describe*
+          - ec2:Get*
+          - ecs:Describe*
+          - ecs:List*
+          - elasticache:Describe*
+          - elasticache:List*
+          - elasticloadbalancing:Describe*
+          - elasticmapreduce:List*
+          - elasticmapreduce:Describe*
+          - es:ListTags
+          - es:ListDomainNames
+          - es:DescribeElasticsearchDomains
+          - kinesis:List*
+          - kinesis:Describe*
+          - logs:Get*
+          - logs:Describe*
+          - logs:FilterLogEvents
+          - logs:TestMetricFilter
+          - rds:Describe*
+          - rds:List*
+          - route53:List*
+          - s3:GetBucketTagging
+          - s3:ListAllMyBuckets
+          - ses:Get*
+          - sns:List*
+          - sns:Publish
+          - sqs:ListQueues
+          - support:*
+          - autoscaling:Describe*
+          - budgets:ViewBudget
+          - cloudtrail:DescribeTrails
+          - cloudtrail:GetTrailStatus
+          - cloudwatch:Describe*
+          - cloudwatch:Get*
+          - cloudwatch:List*
+          - codedeploy:List*
+          - codedeploy:BatchGet*
+          - dynamodb:list*
+          - dynamodb:describe*
+          - ec2:Describe*
+          - ec2:Get*
+          - ecs:Describe*
+          - ecs:List*
+          - elasticache:Describe*
+          - elasticache:List*
+          - elasticfilesystem:DescribeFileSystems
+          - elasticfilesystem:DescribeTags
+          - elasticloadbalancing:Describe*
+          - elasticmapreduce:List*
+          - elasticmapreduce:Describe*
+          - es:ListTags
+          - es:ListDomainNames
+          - es:DescribeElasticsearchDomains
+          - kinesis:List*
+          - kinesis:Describe*
+          - lambda:List*
+          - logs:Get*
+          - logs:Describe*
+          - logs:FilterLogEvents
+          - logs:TestMetricFilter
+          - rds:Describe*
+          - rds:List*
+          - route53:List*
+          - s3:GetBucketTagging
+          - s3:ListAllMyBuckets
+          - ses:Get*
+          - sns:List*
+          - sns:Publish
+          - sqs:ListQueues
+          - support:*
+          - tag:getResources
+          - tag:getTagKeys
+          - tag:getTagValues
+          Effect: Allow
+          Resource: '*'
+      Roles:
+      - !Ref 'DatadogAWSIntegrationRole'
+  DatadogAWSCloudTrailReadOnlyAccessPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
       PolicyName: DatadogAWSCloudTrailReadOnlyAccess
-      PolicyDocument: 
-        Version: "2012-10-17"
-        Statement: 
-          - Action: 
-              - "s3:ListBucket"
-              - "s3:GetBucketLocation"
-              - "s3:GetObject"
-            Effect: Allow
-            Resource: "arn:aws:s3:::cloudtrail-*"
-      Roles: 
-        - Ref: DatadogAWSIntegrationRole
-Outputs: 
-  RoleName: 
-    Description: "The IAM Role to share with Datadog (Name)"
-    Value: 
-      Ref: DatadogAWSIntegrationRole
-  RoleArn: 
-    Description: "The IAM Role to share with Datadog (ARN)"
-    Value: 
-      "Fn::GetAtt": 
-        - DatadogAWSIntegrationRole
-        - Arn
-  DatadogExternalID: 
-    Description: "Datadog AWS External ID"
-    Value: 
-      Ref: DatadogExternalID
-  AwsAccoutID: 
-    Description: "AWS Account ID"
-    Value: 
-      Ref: "AWS::AccountId"
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Action:
+          - s3:ListBucket
+          - s3:GetBucketLocation
+          Effect: Allow
+          Resource: '*'
+        - Action:
+          - s3:GetObject
+          Effect: Allow
+          Resource: arn:aws:s3:::cloudtrail-*
+      Roles:
+      - !Ref 'DatadogAWSIntegrationRole'
+Outputs:
+  RoleName:
+    Description: The IAM Role to share with Datadog (Name)
+    Value: !Ref 'DatadogAWSIntegrationRole'
+  RoleArn:
+    Description: The IAM Role to share with Datadog (ARN)
+    Value: !GetAtt 'DatadogAWSIntegrationRole.Arn'
+  DatadogExternalID:
+    Description: Datadog AWS External ID
+    Value: !Ref 'DatadogExternalID'
+  AwsAccoutID:
+    Description: AWS Account ID
+    Value: !Ref 'AWS::AccountId'
